...
        android:src="@drawable/ic_favorite_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_option_display_on_widget" />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        android:padding="@dimen/padding_normal"
        app:layout_constraintTop_toBottomOf="@id/sw_option_display_on_widget">

...
                android:text="@string/label_steps_section"
                android:textSize="@dimen/title_text_size"
                android:textStyle="normal" />

            <!--Launches Steps Activity-->
            <Button
                android:id="@+id/btn_view_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/btn_view_steps_background"
                android:elevation="@dimen/translation_elevation"
...
