<resources>
    <string name="app_name" translatable="false">Keki</string>
    <string name="label_servings">Serves</string>
    <string name="mainview_image_content_description">Pastry Image</string>
    <string name="label_network_error">Check Your Internet Connection</string>
    <string name="label_offline_content_description">Offline</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_view_steps">View Steps</string>
    <string name="label_steps_section">Preparation Steps</string>
    <string name="label_thumbnail">Thumbnail</string>

    <string name="channel_notification_description">Controls The Playing Recipe Instruction Media From Notification Panel</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="channel_notification_name">Music Notification Control</string>

    <!--On Two Pane Fragment-->
    <string name="pick_a_step">Pick A Step To Begin</string>

    <string name="content_desc_favcon">Image For Selecting Desired Recipe</string>
    <!--Widget Text-->
    <string name="no_desired_ingredient">No Desired Ingredient Selected ,select one from app.</string>

    <!--Widget Switch Text-->
    <string name="label_off">no</string>
    <string name="label_on">yes</string>
    <string name="label_fav">Favourite :</string>
    <string name="label_display">Display on Widget :</string>
</resources>
