...
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorPrimaryDark"
                tools:text="1" />

            <TextView
                android:id="@+id/tv_short_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/raleway"
                android:maxLines="3"
                android:textAlignment="center"
...
