<?xml version="1.0" encoding="utf-8"?>
<!--Static Fragment Displaying Lists-->
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_steps_container"
    android:name="ke.co.keki.com.keki.view.steps.StepsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
